# advice

./: .gitignore  CMakeLists.txt  advice.cpp  advice.h  main.cpp  sentence.cpp  sentence.h
